log
Thu 05 Oct 2023 12:16:35 AM UTC: 
 sudoku.c | 64 ++++++++++++++++++++++++++++++++++++++++++++++++++++++----------
 1 file changed, 54 insertions(+), 10 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:88:7: error: unused variable ‘count’ [-Werror=unused-variable]
   88 |   int count = 0;
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
c81aaa1
Thu 05 Oct 2023 12:16:50 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
db29a57
Thu 05 Oct 2023 12:22:18 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
eb03ceb
Thu 05 Oct 2023 12:53:58 AM UTC: 
 sudoku.c | 28 ++++++++++++++++++++++------
 1 file changed, 22 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 35/70
48a9966
